--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -8,14 +8,93 @@ on:
       - master
 jobs:
   build:
+    name: Building
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          cache: "maven"
+
+      - name: Build Spring Project
+        working-directory: lab1
+        run: mvn package
+
+      - name: Build Docker image
+        working-directory: lab1
+        run: |
+            docker build -t rsoi_lab1 --file ../Dockerfile .
+
+      - name: Save Docker image as tar
+        run: |
+          docker save rsoi_lab1 > rsoi_lab1.tar
+
+      - name: Upload Docker image
+        uses: actions/upload-artifact@v4
+        with:
+          name: rsoi_lab1
+          path: rsoi_lab1.tar
+
+  test:
+    name: Testing
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          cache: "maven"
+
+      - name: Run tests
+        working-directory: lab1
+        run: mvn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download Docker image
+        uses: actions/download-artifact@v4
+        with:
+          name: rsoi_lab1
+
+      - name: Get commit hash
+        id: get_commit_hash
+        run: echo "COMMIT_HASH=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+
+      - name: Install ssh keys
+        run: |
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.REMOTE_HOST }} > ~/.ssh/known_hosts
+
+      - name: Deploy to remote server
+        run: |
+          scp rsoi_lab1.tar ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/tmp
+          ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
+            docker ps --filter name=rsoi_lab1_* --filter status=running -aq | xargs docker stop | xargs docker rm
+            cd /tmp
+            docker load < rsoi_lab1.tar
+            cd /app/rsoi_lab1
+            docker run -d --name rsoi_lab1_${{ env.COMMIT_HASH }} --network host rsoi_lab1
+          EOF
+
+
+
+  autograding:
     name: Autograding
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      # TODO build, test and deploy project
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
@@ -28,13 +107,3 @@ jobs:
       - name: Autograding
         uses: education/autograding@v1
         continue-on-error: true
-
-      - name: Github auto grader mark
-        uses: Romanow/google-sheet-autograder-marker@v1.0
-        with:
-          google_token: ${{secrets.GOOGLE_API_KEY}}
-          sheet_id: "1xkgjUX6Qmk7rdJG-QPOToav-HWWtthJjnShIKnw3oIY"
-          homework_number: 1
-          user_column: 'D'
-          column_offset: 'F'
-          mark: "'+"
