--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -91,6 +91,7 @@ jobs:
   autograding:
     name: Autograding
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - uses: actions/checkout@v3
         with:
