--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: oracle
           java-version: "17"
           cache: "maven"
 
@@ -45,6 +46,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: oracle
           java-version: "17"
           cache: "maven"
 
